--- a/style.css
+++ b/style.css
@@ -2,55 +2,187 @@
     margin: 0;
 }
 
-.container {
-    margin: 30px auto;
-    width: 90%;
-}
-.skip-item span {
-    font-weight: 600px;
-    color: rgb(128, 109, 0);
-}
-
 .skip-section {
     width: 100%;
-    height: 500px;
+    height: 600px;
+}
+
+
+.skip-parent {
+    margin: 30px auto;
+    width: 90%;
+
 }
 
 .skip-parent {
     display: flex;
 }
 
+
+.skip-item {
+    width: 50%;
+}
+
+.skip-item span {
+    font-weight: 100px;
+    color: tomato;
+    
+}
+
+.skip-item img {
+    width: 90%;
+    margin-left: 50px;
+}
+
+.skip-item h1 {
+    margin-top: 70px;
+    font-size: 60px;
+    color: rgb(58, 53, 53);
+}
+
+
+.skip-item p {
+    margin: 50px 0px;
+    font-size: 20px;
+    color: grey;
+}
+
+.skip-item a {
+    text-decoration: none;
+    padding: 20px 50px;
+    font-size: 20px;
+    color: white;
+    background-image: linear-gradient(258deg, orange, transparent);
+    background-color: tomato;
+    border: none;
+    border-radius: 36px;
+    margin: 30px;
+}
+
+.about-section {
+    width: 100%;
+}
+
 .about-parent {
     display: flex;
+    background-image: url(../img/7.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.about-item {
+    width: 50%;
+}
+
+.about-parent h1 {
+    margin-top: 70px;
+    font-size: 60px;
+    color: rgb(58, 53, 53);
+}
+
+.about-parent p {
+    margin: 50px 0px;
+    font-size: 20px;
+    color: grey;
+}
+
+.about-parent a {
+    text-decoration: none;
+    padding: 20px 50px;
+    font-size: 20px;
+    color: white;
+    background-image: linear-gradient(258deg, orange, transparent);
+    background-color: tomato;
+    border: none;
+    border-radius: 36px;
+    margin: 30px;
 }
 
 .card-parent {
     display: flex;
 }
 
-.card {
-    width: 250px;
-    height: 300px;
-    margin: 25px;
-    padding: 5px;
+.skip-item {
+    display: 50%;
 }
 
-.card h3 {
-    margin-top: 100px;
+.recipe-section {
+    margin: 30px auto;
+    width: 90%;
 }
 
-.card-img {
-    height: 100px;
+.recipe-section h1 {
+    text-align: center;
+    font-size: 60px;
+    color: rgb(58, 53, 53);
 }
 
-.card-img img {
+.recipe-p {
+    text-align: center;
+    font-size: 20px;
+    color: grey;
+}
+
+.card-parent {
+    display: flex;
+}
+
+.card-1 {
+    width: 300px;
+    height: 380px;
+    margin: 35px auto 35px 0px;
+    padding: 15px;
+    box-shadow: 0px 0px 18px lightgrey;
+    border-radius: 25px;
+}
+
+.card-2 {
+    width: 300px;
+    height: 380px;
+    margin: 35px auto;
+    padding: 15px;
+    box-shadow: 0px 0px 18px lightgrey;
+    border-radius: 25px;
+}
+
+.card-3 {
+    width: 300px;
+    height: 380px;
+    margin: 35px 0px 35px auto;
+    padding: 15px;
+    box-shadow: 0px 0px 18px lightgrey;
+    border-radius: 25px;
+}
+
+.card-1 img {
     width: 100%;
+    height: 50%;
+}
+
+.card-2 img {
+    width: 100%;
+    height: 50%;
+}
+
+
+.card-3 img {
+    width: 100%;
+    height: 50%;
+}
+
+
+.card-parent h3, p {
+    margin-top: 15px;
 }
 
 .counter-section {
-    width: 100%;
     height: 150px;
-    box-shadow: 0px 0px 10px 0px;
+    box-shadow: 0px 0px 18px lightgrey;
+    margin-bottom: 30px;
+    margin: 30px auto;
+    width: 90%;
+    border-radius: 26px;
 }
 
 .counter-parent {
@@ -68,17 +200,24 @@
 }
 
 footer {
-    height: 150px;
     background-color: black;
     text-align: center;
-    margin-top: 30px;
+    height: 200px;
+    padding: 5px;
 }
 
 footer h1 {
-    color: bisque;
-    margin: 30px auto;
+    margin: 30px;
+}
+
+.food-span {
+    color: rgb(252 164 0);
+}
+
+.network-span {
+    color: #928882;
 }
 
 footer p {
-    color: white;
+    color: white
 }
